Implemented collapse logic